1998-12-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* EZBin.[hm], EZGraph.[hm]: Add filename and accessors.  Rename
	theTitle to title.  Default filename to title in setTitle.

	* analysis.h (EZBin, EZGraph): Declare getFilename and setFilename:.
	Add getTitle.

1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT, AGE): Increment.  Swarm 1.3.1 released.

1998-09-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* analysis.h (EZBin): Add setMonoColorBars:.
	(EZGraph): Change getGraph return type, and include createEnd.

	* EZGraph.m ([EZGraph +createBegin:]): Add more colors, change
	scheme. 

	* EZGraph.h (EZGraph): Make theGraph conform to Graph protocol.

	* EZGraph.[hm]: Make getGraph return object conforming to Graph
	protocol.

	* EZBin.m: New array binColors.
	([EZBin +createBegin:]): Initialize monoColorsBars to NO.
	([EZBin -createEnd]): Call setColors: if not monoColorsBars.

	* EZBin.[hm]: New setter setMonoColorsBars:.

	* EZBin.h (EZBin): Add monoColorBars.

1998-09-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* analysis.h (EZBin): Note that the upper bound is not inclusive.

1998-09-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZBin.[mh] ([EZBin -getHistogram]), analysis.h: New method.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* EZBin.m ([EZBin +createBegin:]): Initialize precision to 3.
	([EZBin -createEnd]): Use setXaxisMin:max:step:precision: instead of
	conditional on binNum and step adjustment.

	* EZBin.[mh] ([EZBin -setPrecision:]): New method.

	* analysis.h: Likewise.

	* EZBin.h (EZBin): New ivar precision.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment. Swarm 1.3 released.

	From Sven Thommesen <sthomme@humsci.auburn.edu>:
	
	* analysis.h (EZGraph): Return value is now a sequence for
	create{,Average,Count,Min,Max,Total}Sequence:withFeedFrom: methods.
	Declare new method -dropSequence:.
